--- a/src/main/webapp/resources/css/shop/draw/draw_admin.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_admin.css
@@ -1,7 +1,7 @@
 .drawHeaderNavDiv{
     width: 100%;
     height: 40px;
-    background-color: #2e383c;
+    background-color: var(--subMenuColor);
     display: flex;
     align-items: center;
     justify-content: end;
@@ -13,8 +13,8 @@
     color: white;
     cursor: pointer;
     border: none;
-    font-family: "Black Han Sans";
     transition: .3s;
+    font-family: GimpoGothicBold00;
 }
 /*이벤트*/
 .drawContainer {
@@ -26,22 +26,28 @@
 
 /*이벤트 상단*/
 .drawHeaderDiv {
-    margin: 5rem 0 5rem;
     width: 100%;
-    position: relative;
-    border-top: 1px solid whitesmoke;
+    margin: 2rem 0;
 }
 
-.drawHeaderDiv span {
-    position: absolute;
-    top: -16px;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: var(--subColor);
-    padding: 0 10px;
-    font-weight: bold;
+.drawHeaderDiv span:first-child {
+    margin-left: 1rem;
+    display: inline-block;
+    font-family: GimpoGothicBold00;
+    font-size: 2rem;
+    color: var(--basicFontColor);
+    color: transparent;
+    text-decoration: none;
+    font-family: "Black Han Sans";
+    -webkit-text-stroke: 1px #8cd550;
 }
-
+.drawHeaderDiv span:last-child{
+    display: block;
+    font-size: 1rem;
+    color: var(--subFontColor);
+    padding-left: 10rem;
+    font-family: GimpoGothicBold00;
+}
 
 .drawCenterDiv {
     width: 100%;
@@ -50,6 +56,7 @@
 /*이벤트 내용, foreach 반복 디비전*/
 .drawBodyDiv {
     width: 100%;
+    background-color: var(--sub2Color);
 }
 
 .oneDrawDiv {
@@ -62,7 +69,7 @@
 .oneDrawTop {
     width: 100%;
     height: 50px;
-    background-color: var(--sub2Color);
+    background-color: rgba(21, 21, 21, 0.69);
     display: flex;
     align-items: center;
     padding-left: 1rem;
@@ -97,7 +104,7 @@
 .drawBottomDiv {
     width: 50%;
     height: 100%;
-    padding: 1rem 0 0 2rem;
+    padding-top: 2rem;
     overflow-y: auto;
 }
 
@@ -141,7 +148,7 @@
     font-size: 1rem;
     background-color: transparent;
     color: white;
-    font-family: "Black Han Sans";
+    font-family: GimpoGothicBold00;
     cursor: pointer;
     outline: none;
     border: none;
@@ -155,10 +162,10 @@
     text-decoration: underline;
     background-color: transparent;
     color: white;
-    font-family: "Black Han Sans";
     cursor: pointer;
     outline: none;
     border: none;
+    font-family: GimpoGothicBold00;
 }
 
 /*당첨자 리스트 컨테이너*/
@@ -264,6 +271,8 @@
     }
 
     .drawCenterDiv {
+        width: 90%;
+        margin: 0 auto;
         height: 800px;
         flex-direction: column;
     }
@@ -279,10 +288,9 @@
     }
 
     .drawBottomDiv {
-        padding: 0.5rem;
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: center;
     }
 
     .drawBottomDiv li span {
@@ -291,6 +299,14 @@
     }
 
     .drawBottomDiv li span:nth-child(2) {
+        font-size: 0.7rem;
+        text-align: right;
+    }
+    .drawHeaderDiv span:first-child{
+        font-size: 1.2rem;
+    }
+    .drawHeaderDiv span:last-child{
+        padding-left: 5rem;
         font-size: 0.7rem;
     }
 }
@@ -311,10 +327,9 @@
     }
 
     .drawBottomDiv {
-        padding: 0.5rem;
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: center;
     }
 
 }
