--- a/src/main/webapp/resources/css/shop/main/shop_admin.css
+++ b/src/main/webapp/resources/css/shop/main/shop_admin.css
@@ -33,16 +33,14 @@
     object-fit: fill;
 }
 .carouselImgDiv img:first-child{
-    animation: loadCarouselMainImg 2s 1 linear forwards;
+    animation: loadCarouselMainImg 1s 1 linear forwards;
 }
 @keyframes loadCarouselMainImg {
     0%{
         opacity: 0;
-        transform: scale(1, 1.1);
     }
     100%{
         opacity: 1;
-        transform: scale(1, 1);
     }
 }
 .adNaviCon{
@@ -246,10 +244,10 @@ main {
 }
 /*상품*/
 .product {
-    width: 20%;
-    height: 350px;
+    width: 19%;
+    margin: 1px;
+    height: 340px;
     background-color: var(--sub2Color);
-    border: 3px solid var(--subColor);
     padding: 1rem;
     display: flex;
     align-items: center;
