--- a/src/main/webapp/resources/css/shop/shop_global.css
+++ b/src/main/webapp/resources/css/shop/shop_global.css
@@ -92,8 +92,8 @@ header a{
 }
 /*로그인 유저 이미지*/
 #headerUserProfileImg{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     border: 3px solid dodgerblue;
 }
@@ -123,11 +123,29 @@ header a{
     border-bottom: 3px solid white;
     border-radius: 0px;
 }
-.shopFooterMapDiv{
-
+.mapHeaderDiv{
     width: 100%;
+    height: 550px;
+    margin: 15rem auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--sub2Color);
+}
+.mapHeaderDiv span{
+    display: inline-block;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bolder;
+}
+.shopFooterMapDiv{
+    width: 60%;
     height: 500px;
-    margin-top: 15rem;
+    margin: 0 auto;
 }
 
 footer{
@@ -223,6 +241,9 @@ footer{
     .logo h1:after {
         opacity: 1;
         transform: translate(16px, -16px);
+    }
+    .shopFooterMapDiv{
+        width: 80%;
     }
 
 
