최원석 노트북

--- a/src/main/webapp/resources/css/shop/qna/qna_detail.css
+++ b/src/main/webapp/resources/css/shop/qna/qna_detail.css
@@ -109,10 +109,14 @@
 .qnaDateSpan{
     color: rgba(141,141,141,0.87);
     font-size: 0.9rem;
+
 }
 .qnaSubjectSpan{
     font-weight: bolder;
     margin-bottom: 0.5rem;
+}
+.dateDashSpan{
+    font-weight: bolder;
 }
 
 
