--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -185,7 +185,7 @@ main {
     width: 50px;
     height: 50px;
     color: var(--basicFontColor);
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     transition: .3s;
     cursor: pointer;
     border: none;
@@ -214,7 +214,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     cursor: pointer;
     width: 50px;
     height: 50px;
@@ -354,7 +354,7 @@ main {
     min-height: 300px;
     height: fit-content;
     border: 3px solid var(--subColor);
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     padding: 1rem;
     color: var(--subFontColor);
     font-family: 'GimpoGothicBold00';
@@ -493,7 +493,7 @@ main {
     justify-content: center;
     align-items: center;
     transition: .5s;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     border-radius: 50%;
 }
 .naviDiv i{
