--- a/src/main/webapp/resources/css/admin/detail.css
+++ b/src/main/webapp/resources/css/admin/detail.css
@@ -58,7 +58,7 @@ p{
 	position: relative;
 	overflow: hidden;
 	transition: .3s;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 }
 
 .arrowIcon{
@@ -86,7 +86,7 @@ p{
 	width: 20%;
 	height: 100%;
 	padding: 1rem;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	margin-top: 2rem;
 }
 .bottomRight{
@@ -97,7 +97,7 @@ p{
 	/* border: 3px solid green; */
 }
 .freeBoard{
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	margin: 1rem 0;
 	width: 100%;
 	height: 33%;
@@ -115,7 +115,7 @@ p{
 	background-color: rgba(31, 31, 31, 0.47);
 }
 .freeBoard{
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
@@ -133,7 +133,7 @@ p{
 	background-color: rgba(31, 31, 31, 0.47);
 }
 .qna{
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
@@ -151,7 +151,7 @@ p{
 	background-color: rgba(31, 31, 31, 0.47);
 }
 .buy{
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	margin: 1rem 0;
 	width: 100%;
 	max-height: 500px;
