--- a/src/main/webapp/resources/css/common/forgot.css
+++ b/src/main/webapp/resources/css/common/forgot.css
@@ -14,7 +14,7 @@ body{
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+	box-shadow: var(--subColor2) 0px 0px 5px 3px;
 	background-color: rgb(76, 76, 76);
 	
 }
