--- a/src/main/webapp/resources/css/shop/draw/draw_admin.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_admin.css
@@ -56,7 +56,7 @@
 /*이벤트 내용, foreach 반복 디비전*/
 .drawBodyDiv {
     width: 100%;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
 }
 
 .oneDrawDiv {
@@ -98,7 +98,7 @@
     width: 350px;
     height: 350px;
     border-radius: 10px;
-    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+    box-shadow: var(--subColor2) 0px 0px 5px 3px;
 }
 
 .drawBottomDiv {
@@ -336,7 +336,7 @@
 
 @media screen and (min-width: 1024px) {
     .addDrawBtn:hover{
-        background-color: var(--sub2Color);
+        background-color: var(--subColor2);
     }
     .productAnchor:hover{
         color: var(--fontColor);
