--- a/src/main/webapp/resources/css/shop/draw/draw_modify.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_modify.css
@@ -63,7 +63,7 @@
 .oneDrawTop {
     width: 100%;
     height: 50px;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -82,7 +82,7 @@
     height: 100%;
     padding-left: 0.5rem;
     color: var(--subFontColor);
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     border: none;
     outline: none;
     transition: .3s;
@@ -114,7 +114,7 @@
     width: 500px;
     height: 500px;
     border-radius: 10px;
-    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+    box-shadow: var(--subColor2) 0px 0px 5px 3px;
 }
 
 .drawBottomDiv {
@@ -156,7 +156,7 @@
     width: 90%;
     height: 50px;
     padding: 0.5rem;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     color: white;
     resize: none;
     transition: .3s;
@@ -173,7 +173,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
 }
 
 .drawModifyBtn {
@@ -264,7 +264,7 @@
 
 @media screen and (min-width: 1024px) {
     .addDrawBtn:hover{
-        background-color: var(--sub2Color);
+        background-color: var(--subColor2);
     }
     .productAnchor:hover{
         color: var(--fontColor);
