--- a/src/main/webapp/resources/css/shop/product/product_add.css
+++ b/src/main/webapp/resources/css/shop/product/product_add.css
@@ -16,7 +16,7 @@
 	min-width: 50px;
 	height: 50px;
 	padding-left: 0.5rem;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	font-family: 'GimpoGothicBold00';
 	transition: .3s;
 	border: none;
@@ -26,7 +26,7 @@
 .productAddBtns{
 	width: 150px;
 	height: 50px;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	transition: .3s;
 	color: var(--subFontColor);
 	cursor: pointer;
@@ -159,7 +159,7 @@ table td:nth-child(2n-1){
 	width: 300px;
 	height: 100px;
 	padding-left: 0.5rem;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	color: var(--basicFontColor);
 	font-family: 'GimpoGothicBold00';
 	transition: .3s;
