--- a/src/main/webapp/resources/css/shop/qna/qna_detail.css
+++ b/src/main/webapp/resources/css/shop/qna/qna_detail.css
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 1600px;
     margin: 5rem auto;
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
 }
 .detailTopDiv{
     width: 100%;
@@ -60,8 +60,8 @@
 .detailText{
     background-color: rgba(30, 30, 30, 0.83);
     width: 100%;
-    overflow-y: auto;
     padding: 1rem;
+    min-height: 100px;
 }
 /* qna이미지컨테이너 */
 .qnaImgContainer{
@@ -118,6 +118,53 @@
     font-weight: bolder;
 }
 
+.answerDiv{
+    padding: 1rem;
+}
+.answerText{
+    background-color: rgba(30, 30, 30, 0.83);
+    padding: 1rem;
+}
+.answerText h3{
+    margin-bottom: 0.5rem;
+    padding-bottom: 5px;
+}
+
+.answerSubjectSpan{
+    color: var(--basicFontColor);
+    font-size: 1rem;
+    font-weight: bolder;
+}
+.answerDateSpan{
+    font-weight: bolder;
+    font-size: 0.9rem;
+    color: var(--subFontColor4);
+}
+.answerTextDetailDiv{
+    border-top: 1px solid var(--borderColor);
+    width: 100%;
+    color: white;
+    margin-top: 1rem;
+    padding: 2rem 0;
+    min-height: 100px;
+}
+
+#qnaDetailModifyAnchor{
+    color: var(--fontColor);
+    font-weight: bolder;
+}
+
+#qnaDetailDeleteAnchor{
+    color: var(--fontColor);
+    font-weight: bolder;
+    background-color: transparent;
+    font-family: GimpoGothicRegular00;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
 
 @media screen and (min-width: 1px) and (max-width: 767px) {
     .detailProfileImgDiv{
@@ -143,6 +190,10 @@
     .qnaTitleSpan{
         margin-top: 3px;
     }
+    .answerTextDateDivInner{
+        margin-bottom: 0.5rem;
+        display: block;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -159,5 +210,10 @@
 
 }
 @media screen and (min-width: 1024px) {
-    
+    #qnaDetailModifyAnchor:hover{
+        border-bottom: 1px solid var(--fontColor);
+    }
+    #qnaDetailDeleteAnchor:hover{
+        border-bottom: 1px solid var(--fontColor);
+    }
 }
