--- a/src/main/webapp/resources/css/shop/qna/qna_list.css
+++ b/src/main/webapp/resources/css/shop/qna/qna_list.css
@@ -36,7 +36,8 @@
     transition: .3s;
 }
 .qnaListBodyDiv{
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
+    min-height: 70vh;
 }
 .qnaLineHeadDiv{
     width: 100%;
@@ -181,6 +182,10 @@
     display: inline-block;
     font-size: 1.1rem;
     font-weight: bolder;
+}
+
+.searchResultP{
+    padding: 1rem;
 }
 
 @media screen and (min-width: 1px) and (max-width: 767px) {
