--- a/src/main/webapp/resources/css/user/basket.css
+++ b/src/main/webapp/resources/css/user/basket.css
@@ -17,7 +17,7 @@
 	width: 100%;
 	max-width: 1600px;
 	height: calc(100vh - 160px);
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
