--- a/src/main/webapp/resources/css/user/review.css
+++ b/src/main/webapp/resources/css/user/review.css
@@ -5,7 +5,7 @@
 	justify-content: space-around;
     align-items: center;
     font-family: 'Black Han Sans';
-    background-color: var(--sub2Color);
+    background-color: var(--subColor2);
     font-family: "Black Han Sans";
 }
 
@@ -136,7 +136,7 @@
     width: 100%;
     height: 100%;
     padding: 0.5rem;
-	background-color: var(--sub2Color);
+	background-color: var(--subColor2);
     color: white;
 	font-family: 'GimpoGothicBold00';
 	transition: .3s;
