--- a/src/main/webapp/resources/css/admin/admin.css
+++ b/src/main/webapp/resources/css/admin/admin.css
@@ -98,13 +98,13 @@
 }
 /*회원*/
 .memberDiv{
-	width: 100%;
+	width: 97%;
 	height: 100px;
 	display: flex;
-	border: 2px solid var(--subColor2);
-	background-color: #1c1e1e;
 	cursor: pointer;
-	transition: .2s;
+	transition: .3s;
+	margin: 4px;
+
 }
 .memberImgDiv{
 	width: 100px;
@@ -117,15 +117,13 @@
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
-	border: 3px solid dodgerblue;
 }
 .memberIdDiv{
 	width: 70%;
 	height: 100%;
-
 	display: flex;
 	align-items: center;
-	padding-left: 0.5rem;
+	padding: 0 0.5rem;
 }
 .memberIdSpan{
 	color: var(--subFontColor);
@@ -257,6 +255,8 @@
 	}
 	.memberDiv:hover{
 		background-color: rgba(35, 35, 35, 0.62);
+		box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.58);
+		transform: translateZ(4px);
 	}
 
 
