--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -5,7 +5,6 @@
     background-color: var(--mainColor);
     position: relative;
     overflow: hidden;
-    border: 1px solid var(--basicFontColor);
 }
 .adContainer {
     width: 600%;
@@ -35,14 +34,7 @@
 .carouselImgDiv img:first-child{
     animation: loadCarouselMainImg 1s 1 linear forwards;
 }
-@keyframes loadCarouselMainImg {
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
-}
+
 .adNaviCon{
     position: absolute;
     width: 200px;
@@ -67,12 +59,11 @@
     background-color: var(--fontColor);
     transform : scale(1.5,1.5);
 }
-/*-------------------------------------------------------------------------*/
+
 
 /*상품구역, 네비구역 컨테이너*/
 main {
     width: 100%;
-    display: flex;
     position: relative;
 }
 /*상품 구역*/
@@ -80,7 +71,6 @@ main {
     width: 100%;
     max-width: 1600px;
     margin: 0 auto;
-    background-color: var(--subColor);
 }
 .itemBestDivCon{
     width: 100%;
@@ -94,7 +84,6 @@ main {
     justify-content: start;
     padding: 0.5rem;
     font-family: 'GimpoGothicBold00';
-
 }
 .itemBestHeader h1 {
     padding-left: 0.5rem;
@@ -112,14 +101,16 @@ main {
 }
 /*상품 컨트롤 아이콘*/
 .forwardSpan, .backSpan{
+    font-size: 2rem;
+    padding: 1rem;
+    display: inline-block;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     color: var(--basicFontColor);
-    background-color: rgba(33, 33, 33, 0.8);
+    background-color: rgba(0, 0, 0, 0.55);
     cursor: pointer;
     z-index: 2;
-    padding: 0.5rem;
     border-radius: 20%;
     transition: .3s;
 }
@@ -137,6 +128,7 @@ main {
     height: 100%;
     display: flex;
     color: var(--subFontColor);
+    left: -100%;
 }
 .itemBestDiv a {
     font-family: 'GimpoGothicBold00';
@@ -150,14 +142,12 @@ main {
     padding: 1rem;
     position: relative;
     background-color: var(--subColor2);
-    border: 3px solid var(--subColor);
     transition: .3s;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
-
 }
 
 /*이름 디비전*/
@@ -218,9 +208,77 @@ main {
 .itemAllHeader h1 {
     margin-left: 0.5rem;
 }
-.categorySpanAnchor{
+.itemAllOptionDiv{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 0.5rem;
+}
+.itemAllOptionSelectDiv{
+    width: 30%;
+    height: 50px;
+}
+.itemAllOptionSelectDiv select{
+    background-color: var(--subColor);
+    font-family: GimpoGothicRegular00;
+    color: var(--subFontColor4);
+    width: 100px;
+    height: 100%;
     cursor: pointer;
-    margin-left: 0.5rem;
+    border: none;
+}
+
+.itemAllOptionSpanDiv{
+    width: 30%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 0 0.5rem;
+}
+.optionLabelWrapDiv{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: var(--subColor2);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    z-index: 1;
+    margin-right: 1rem;
+}
+.optionLabel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    font-weight: bolder;
+    font-size: 0.9rem;
+    color: var(--subFontColor3);
+    position: relative;
+    z-index: 3;
+    cursor: pointer;
+    user-select: none;
+}
+.searchOptionCheckBox{
+    overflow: hidden;
+    width: 0;
+}
+#optionLabelUnderLineDiv{
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    z-index: 2;
+    transition: .3s;
+    background-color: rgba(0, 0, 0, 0.41);
+    border-radius: 10px;
+    top: 5px;
+    left: 4px;
+}
+#optionSearchSpan{
+    cursor: pointer;
 }
 /*상품 내용*/
 .itemAllBody {
@@ -231,12 +289,11 @@ main {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    background-color: var(--subColor);
+    padding: 0.5rem;
 }
 /*상품*/
 .product {
-    width: 19%;
-    margin: 1px;
+    width: 20%;
     height: 340px;
     background-color: var(--subColor2);
     padding: 1rem;
@@ -307,123 +364,16 @@ main {
 }
 
 
-/*사이드바 디비전*/
-.side {
-    width: 10vw;
-    min-width: 280px;
-    position: fixed;
-    transition: .3s ease-in-out;
-    top: 160px;
-    right: 0;
-    transform: translateX(100%);
-    z-index: 999;
 
-}
-/*알림 메시지*/
-.side p {
-    font-size: 0.8rem;
+@keyframes loadCarouselMainImg {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
-.side_navBar {
-    width: 100%;
-    max-height: 100vh;
-    background-color: var(--mainColor);
-    border-radius: 4px;
-    padding: 0.5rem;
-}
-
-/*등급 구역 */
-.gradeDiv {
-    height: 20%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.gradeInnerTop {
-    height: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-#userProfileImg {
-    width: 120px;
-    height: 120px;
-    border-radius: 40%;
-}
-
-.gradeInnerBottom {
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.5rem;
-    background-color: rgba(0, 0, 0, 0.35);
-}
-.gradeInnerBottom span{
-    margin-left: 0.3rem;
-}
-.userGradeSpan {
-    font-size: 1rem;
-}
-
-/*카테고리 구역 */
-.categoryDiv {
-    height: 80%;
-    display: flex;
-}
-/*정렬 메뉴*/
-.sortMenuDiv{
-    width: 40%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.sortMenuCloseDiv{
-    width: 20%;
-    text-align: center;
-    padding-top: 0.6rem;
-    cursor: pointer;
-}
-.sortMenuSpanDiv{
-    width: 100%;
-    border: 3px solid var(--mainColor);
-    background-color: var(--subColor2);
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    transition: .3s;
-}
-.sortMenuSpan{
-    font-size: 1rem;
-    transition: .3s;
-    padding: 0.5rem 0;
-}
-/*소트 메뉴*/
-.sortInnerDiv {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow-y: auto;
-}
-/*정렬 세부 내용 */
-.categorySpan, .brandSpan {
-    display: inline-block;
-    width: 100%;
-    font-size: 0.8rem;
-    cursor: pointer;
-    transition: .3s;
-    color: var(--subFontColor);
-    padding: 0.2rem;
-}
-
-
-
-
-/* ------------------------------------------------------------------------------------------------------*/
 
 /* 스마트폰 */
 @media screen and (min-width:1px) and (max-width:767px) {
@@ -478,15 +428,11 @@ main {
         font-size: 3rem;
     }
     .product {
-        width: 100%;
+        width: 80%;
+        margin: 0 auto;
         height: 300px;
     }
-    .sortMenuDiv span{
-        font-size: 0.5rem;
-    }
-    .gradeDiv{
-        display: none;
-    }
+
 }
 
 /* 타블렛 */
@@ -525,11 +471,8 @@ main {
 
 /* 데스크탑 */
 @media screen and (min-width:1024px) {
-    .itemBestDiv{
-        left: -100%;
-    }
     .forwardSpan:hover, .backSpan:hover{
-        transform: scale(1.1,1.1) translateY(-50%);
+        text-shadow: 0px 0px 5px whitesmoke;
     }
     .moreSpan:hover {
         color: var(--subFontColor);
@@ -539,6 +482,10 @@ main {
     }
     .sortMenuSpanDiv:hover{
         background-color: rgba(49, 49, 49, 0.78);
+    }
+    .product:hover{
+        box-shadow: 1px 1px 7px 3px rgba(0, 0, 0, 0.8);
+        transform: translateZ(4px);
     }
 
 }
