--- a/src/main/webapp/resources/css/shop/draw/draw_add.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_add.css
@@ -79,7 +79,7 @@
 }
 
 .oneDrawTop input[type="text"]{
-    width: 80%;
+    width: 90%;
     height: 100%;
     padding-left: 0.5rem;
     color: var(--subFontColor);
@@ -88,6 +88,7 @@
     outline: none;
     transition: .3s;
     font-weight: bolder;
+    font-family: GimpoGothicRegular00;
 
 }
 
@@ -120,7 +121,6 @@
     height: 50px;
     position: absolute;
     top: 0;
-
     background-color: rgba(0, 0, 0, 0.43);
 }
 .closeImgWrapDivIcon{
@@ -139,14 +139,12 @@
 .productMainImg {
     width: 500px;
     height: 500px;
-    border-radius: 10px;
     box-shadow: var(--subColor2) 0px 0px 5px 3px;
 }
 
 .addDrawProductDiv{
     width: 500px;
     height: 500px;
-    border-radius: 10px;
     box-shadow: var(--subColor2) 0px 0px 5px 3px;
     display: flex;
     align-items: center;
@@ -167,22 +165,33 @@
     width: 50%;
     height: 100%;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.drawBottomDiv::-webkit-scrollbar{
-    width: 10px;
-}
-.drawBottomDiv::-webkit-scrollbar-track{
-    background-color: rgb(94, 94, 94);
-}
-.drawBottomDiv::-webkit-scrollbar-thumb{
-    background-color: rgba(31, 31, 31, 0.47);
-}
+
 
 .infoWrapDiv {
-    width: 100%;
-    height: calc( 100% / 6);
+    margin: 4px auto;
+    width: 90%;
+    height: 50px;
     display: flex;
+    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.55);
+
+}
+.infoWrapDiv:last-child{
+    height: 200px;
+}
+.infoWrapDiv::-webkit-scrollbar{
+    width: 10px;
+}
+.infoWrapDiv::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.infoWrapDiv::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
 }
 .infoTop{
     width: 30%;
@@ -190,6 +199,7 @@
     font-weight: bolder;
     display: flex;
     align-items: center;
+    padding-left: 0.5rem;
 
 }
 .infoBottom{
@@ -201,13 +211,13 @@
 
 .infoBottom textarea{
     width: 90%;
-    height: 50px;
+    height: 150px;
     padding: 0.5rem;
     background-color: var(--subColor2);
     color: white;
     resize: none;
     transition: .3s;
-
+    font-family: GimpoGothicRegular00;
 }
 .infoBottom textarea:focus{
     background-color: var(--mainColor);
@@ -286,13 +296,15 @@
 .selectProductDivRightHeader select{
     width: 100px;
     margin: 0 0.5rem;
+    font-family: GimpoGothicRegular00;
 }
 .selectSpan{
     cursor: pointer;
     position: absolute;
     top: 50%;
-    right: 5px;
+    right: 0.5rem;
     transform: translateY(-50%);
+    font-size: 0.9rem;
 }
 .closeIcon{
     position: absolute;
@@ -357,7 +369,7 @@
     }
     .infoWrapDiv{
         width: 90%;
-        margin: 0 auto;
+        margin: 4px auto;
     }
     .infoTop{
         padding-left: 1rem;
@@ -442,8 +454,8 @@
         width: 100%;
     }
     .infoWrapDiv{
-        width: 80%;
-        margin: 0 auto;
+        width: 90%;
+        margin: 4px auto;
     }
     .infoTop{
         padding-left: 1rem;
