--- a/src/main/webapp/resources/css/shop/draw/draw_customer.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_customer.css
@@ -31,14 +31,10 @@
     font-family: GimpoGothicBold00;
 }
 
-.drawCenterDiv {
-    width: 100%;
-}
 
 /*이벤트 내용, foreach 반복 디비전*/
 .drawBodyDiv {
     width: 100%;
-    background-color: var(--subColor2);
 }
 
 .oneDrawDiv {
@@ -46,6 +42,8 @@
     height: 500px;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 5rem;
+    background-color: var(--subColor2);
 }
 
 .oneDrawTop {
