--- a/src/main/webapp/resources/css/shop/draw/draw_modify.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_modify.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 40px;
     background-color: var(--subMenuColor);
+
     display: flex;
     align-items: center;
     justify-content: end;
@@ -78,7 +79,7 @@
 }
 
 .oneDrawTop input[type="text"]{
-    width: 80%;
+    width: 90%;
     height: 100%;
     padding-left: 0.5rem;
     color: var(--subFontColor);
@@ -87,9 +88,9 @@
     outline: none;
     transition: .3s;
     font-weight: bolder;
+    font-family: GimpoGothicRegular00;
 
 }
-
 
 .drawCenterDiv {
     width: 100%;
@@ -109,34 +110,88 @@
     text-decoration: none;
     transition: .3s;
 }
-
+.productMainImgWrapDiv{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.productMainImgWrapDivCloseDiv{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.43);
+}
+.closeImgWrapDivIcon{
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
 .productMainImg {
     width: 500px;
     height: 500px;
-    border-radius: 10px;
     box-shadow: var(--subColor2) 0px 0px 5px 3px;
+}
+
+.addDrawProductDiv{
+    width: 500px;
+    height: 500px;
+    box-shadow: var(--subColor2) 0px 0px 5px 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.plusIcon{
+    color: var(--subColor);
+    text-shadow: var(--subColor2) 0px 0px 5px;
+    font-size: 5rem;
+    transition: .3s;
+
 }
 
 .drawBottomDiv {
     width: 50%;
     height: 100%;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.drawBottomDiv::-webkit-scrollbar{
-    width: 10px;
-}
-.drawBottomDiv::-webkit-scrollbar-track{
-    background-color: rgb(94, 94, 94);
-}
-.drawBottomDiv::-webkit-scrollbar-thumb{
-    background-color: rgba(31, 31, 31, 0.47);
-}
+
 
 .infoWrapDiv {
-    width: 100%;
-    height: calc( 100% / 7);
+    margin: 4px auto;
+    width: 90%;
+    height: 50px;
     display: flex;
+    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.55);
+
+}
+.infoWrapDiv:last-child{
+    height: 200px;
+}
+.infoWrapDiv::-webkit-scrollbar{
+    width: 10px;
+}
+.infoWrapDiv::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.infoWrapDiv::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
 }
 .infoTop{
     width: 30%;
@@ -144,6 +199,8 @@
     font-weight: bolder;
     display: flex;
     align-items: center;
+    padding-left: 0.5rem;
+
 }
 .infoBottom{
     width: 70%;
@@ -154,13 +211,13 @@
 
 .infoBottom textarea{
     width: 90%;
-    height: 50px;
+    height: 150px;
     padding: 0.5rem;
     background-color: var(--subColor2);
     color: white;
     resize: none;
     transition: .3s;
-
+    font-family: GimpoGothicRegular00;
 }
 .infoBottom textarea:focus{
     background-color: var(--mainColor);
@@ -195,12 +252,6 @@
     .oneDrawDiv {
         height: 1000px;
     }
-    .oneDrawTop{
-        padding: 0;
-    }
-    #draw_title{
-        width: 90%;
-    }
 
     .drawCenterDiv {
         height: 900px;
@@ -214,13 +265,9 @@
         width: 100%;
         height: 600px;
     }
-    .drawImgDiv img {
-        width: 250px;
-        height: 250px;
-    }
     .infoWrapDiv{
         width: 90%;
-        margin: 0 auto;
+        margin: 4px auto;
     }
     .infoTop{
         padding-left: 1rem;
@@ -230,6 +277,19 @@
         justify-content: end;
         padding-right: 1rem;
     }
+    .productMainImgWrapDiv{
+        width: 250px;
+        height: 250px;
+    }
+    .productMainImg {
+        width: 250px;
+        height: 250px;
+    }
+    .addDrawProductDiv{
+        width: 250px;
+        height: 250px;
+    }
+
 
 
 }
@@ -248,9 +308,16 @@
         width: 100%;
         height: 600px;
     }
+    .drawNameSpan{
+        width: 300px;
+    }
+    .drawProductImg{
+        width: 300px;
+        height: 300px;
+    }
     .infoWrapDiv{
-        width: 80%;
-        margin: 0 auto;
+        width: 90%;
+        margin: 4px auto;
     }
     .infoTop{
         padding-left: 1rem;
@@ -260,9 +327,17 @@
         padding-right: 1rem;
     }
 
+
 }
 
 @media screen and (min-width: 1024px) {
+    .addDrawProductDiv:hover{
+        box-shadow: #232323 2px 2px 5px 5px;
+    }
+    .addDrawProductDiv:hover i{
+        transform: scale(1.1,1.1) rotateZ(180deg);
+        text-shadow: black 0px 0px 7px;
+    }
     .addDrawBtn:hover{
         background-color: var(--subColor2);
     }
