--- a/src/main/webapp/resources/css/shop/product/product_add.css
+++ b/src/main/webapp/resources/css/shop/product/product_add.css
@@ -5,88 +5,171 @@
 }
 /*상품 등록 구역*/
 .registProductDiv {
-	width: 60%;
-	background-color: var(--subColor);
-	color: var(--basicFontColor);
-	padding: 1rem;
+	width: 50%;
+	padding: 0.5rem;
+	display: flex;
+	flex-direction: column;
+}
+.productAddLineDiv{
+	width: 100%;
+	height: auto;
+	min-height: 70px;
+	border: 1px solid var(--mainColor);
+	margin: 0.5rem 0;
+	display: flex;
+	align-items: center;
+	transition: .3s;
+}
+.productAddLineInnerDiv{
+	display: flex;
+	align-items: center;
+}
+.productAddLineDiv label{
+	cursor: pointer;
+	user-select: none;
+	color: var(--subFontColor4);
+	font-size: 0.9rem;
+}
+.productAddLineDiv input[type="radio"]{
+	cursor: pointer;
+	margin: 0 2rem 0 0.5rem;
+}
+.productAddTitleSpan{
+	display: inline-block;
+	width: 300px;
+	font-weight: bolder;
+	font-size: 0.9rem;
+	padding: 0 0.5rem;
+
 }
 .productAddInputs {
-	width: 100%;
-	max-width: 300px;
-	min-width: 50px;
+	width: 300px;
 	height: 50px;
-	padding-left: 0.5rem;
+	padding: 0 0.5rem;
 	background-color: var(--subColor2);
-	font-family: 'GimpoGothicBold00';
+	font-family: 'GimpoGothicRegular00';
 	transition: .3s;
-	border: none;
-	outline: none;
-	color: var(--basicFontColor);
-}
-.productAddBtns{
-	width: 150px;
-	height: 50px;
-	background-color: var(--subColor2);
-	transition: .3s;
-	color: var(--subFontColor);
+	color: var(--subFontColor4);
+	border: 0;
 	cursor: pointer;
-	font-family: 'GimpoGothicBold00';
-	font-size: 1.1rem;
-	border: none;
+}
+#product_comment{
+	width: 300px;
+	height: 100px;
+	padding: 0.5rem;
+	background-color: var(--subColor2);
+	color: var(--subFontColor4);
+	font-family: 'GimpoGothicRegular00';
+	transition: .3s;
+	resize: none;
+	margin: 0.5rem 0;
+	border: 0;
 }
 
-.registProductDiv table {
-	border-collapse: collapse;
-	width: 100%;
+
+#mainFile, #subFile{
+	width: 0;
+	overflow: hidden;
+}
+.fileAddLabel{
+	display: flex;
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
+	transition: .3s;
+	align-items: center;
+	justify-content: center;
+	color: black;
+	font-size: 1.2rem;
+}
+#productMainImgSpan, #productSubImgSpan{
+	margin: 0 0.5rem;
+	color: var(--subFontColor3);
 }
 
-table th,table td {
-	width: 50%;
-	padding: 1rem;
-}
-table td:nth-child(2n-1){
-	font-size: 1.3rem;
-	color: var(--subFontColor);
-}
-
-/*업로드 이미지 리스트 디비전 */
 .mainFileListDiv, .subFileListDiv {
 	width: 100%;
-
+	height: auto;
+	padding: 0 0.5rem;
 }
-
+.mainFileListDiv p{
+	display: flex;
+	align-items: center;
+	height: 30px;
+	padding: 0 0.5rem;
+	font-weight: bolder;
+}
+.subFileListDiv p{
+	display: flex;
+	align-items: center;
+	height: 30px;
+	padding: 0 0.5rem;
+	font-weight: bolder;
+}
+.imgList{
+	margin: 0.5rem 0;
+}
+.imgListSub{
+	margin: 0.5rem 0;
+}
 /*업로드 이미지 설정 */
 .imgList:nth-child(1) {
 	background-color: red;
-	margin-bottom: 10px;
 }
 
 .imgList:nth-child(2) {
 	background-color: blue;
-	margin-bottom: 10px;
 }
 
 .imgList:nth-child(3) {
 	background-color: green;
-	margin-bottom: 10px;
 }
 
 .imgListSub:nth-child(1) {
 	background-color: yellow;
 	color: black;
-	margin-bottom: 10px;
 }
 
 .imgListSub:nth-child(2) {
 	background-color: orangered;
 	color: black;
-	margin-bottom: 10px;
+}
+.deleteBtn, .deleteSubBtn{
+	width: 20px;
+	height: 20px;
+	background-color: var(--mainColor);
+	color: var(--basicFontColor);
+	cursor: pointer;
+	margin-left: 1rem;
+	font-size: 0.6rem;
+	font-family: GimpoGothicBold00;
+	border: 0;
+}
+
+.btnDiv{
+	width: 100%;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.preBtn{
+	display: none;
+}
+.productAddBtns{
+	width: 100px;
+	height: 50px;
+	background-color: var(--subColor2);
+	transition: .3s;
+	color: var(--subFontColor);
+	cursor: pointer;
+	font-family: 'GimpoGothicRegular00';
+	border: 1px solid #181818;
 }
 
 /*결과 미리보기 구역 */
 .prePageDiv {
-	position: static;
-	width: 40%;
+	width: 50%;
 	display: block;
 }
 .prePageDivTop {
@@ -105,8 +188,9 @@ table td:nth-child(2n-1){
 	height: 65%;
 	margin-bottom: 5px;
 	padding: 0.5rem;
-	font-size: 2rem;
 	display: none;
+	align-items: center;
+	justify-content: center;
 }
 
 .productImgFirst, .productImgSecond, .productImgThird {
@@ -148,128 +232,82 @@ table td:nth-child(2n-1){
 	 width: 100%;
 	 object-fit: fill;
 }
-.btnDiv{
-	text-align: center;
-}
-.preBtn{
-	display: none;
-}
-
-#formText{
-	width: 300px;
-	height: 100px;
-	padding-left: 0.5rem;
-	background-color: var(--subColor2);
-	color: var(--basicFontColor);
-	font-family: 'GimpoGothicBold00';
-	transition: .3s;
-	border: none;
-	outline: none;
-	resize: none;
-	padding: 1rem;
-}
-
-.deleteBtn, .deleteSubBtn{
-	width: 20px;
-	height: 20px;
-	background-color: var(--mainColor);
-	color: var(--basicFontColor);
-	cursor: pointer;
-	
+#prevMainImg{
+	height: 70%;
+	object-fit: fill;
 }
 
 .closePreDivIcon{
-	display: none;
 	cursor: pointer;
 	position: absolute;
 	z-index: 999;
 	top: 1rem;
 	right: 1rem;
-	background-color: var(--mainColor);
-	color: var(--basicFontColor);
-	transition: .3s;
-	font-variation-settings:
-			'FILL' 0,
-			'wght' 700,
-			'GRAD' 0,
-			'opsz' 48
 }
 @media screen and (min-width: 1px) and (max-width: 767px) {
-	.productAddInputs, #formText{
-		width: 120px;
-		font-size: 0.7rem;
-	}
-	.productAddBtns{
-		width: 100px;
-		font-size: 0.7rem;
-	}
 	.registProductDiv{
 		width: 100%;
-		order: 2;
 	}
 	.prePageDiv{
-		position: fixed;
-		z-index: 999;
-		top: 0;
-		left: 0;
-		display: none;
 		width: 100%;
 		height: 100%;
-		order: 1;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 999;
+		display: none;
 		backdrop-filter: blur(4px);
 	}
-	.productImgMain{
-		font-size: 1rem;
-	}
-	table p{
-		font-size: 0.6rem;
-	}
 	.preBtn{
-		display: inline-block;
-	}
-	.closePreDivIcon{
 		display: block;
 	}
+	.btnDiv{
+		justify-content: space-around;
+	}
+	.productAddLineDiv{
+		flex-direction: column;
+		padding: 0.5rem;
+	}
+	.productAddTitleSpan{
+		margin-bottom: 0.5rem;
+	}
+	#product_comment{
+		margin: 0;
+	}
+	.productAddTitleSpan, .productAddInputs, #product_comment{
+		width: 90%;
+	}
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
 	.registProductDiv{
 		width: 100%;
-		order: 2;
 	}
 	.prePageDiv{
+		width: 100%;
+		height: 100%;
 		position: fixed;
 		top: 0;
 		left: 0;
+		z-index: 999;
 		display: none;
-		width: 100%;
-		height: 100%;
-		order: 1;
 		backdrop-filter: blur(4px);
 	}
-	.productImgMain{
-		font-size: 1.2rem;
-	}
-	table p{
-		font-size: 1rem;
-	}
 	.preBtn{
-		display: inline-block;
-	}
-	.closePreDivIcon{
 		display: block;
+	}
+	.btnDiv{
+		justify-content: space-around;
 	}
 }
 
 @media screen and (min-width: 1024px) {
-	.deleteBtn:hover{
-		color: var(--fontColor);
+	.productAddLineDiv:hover{
+		box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.58);
 	}
-	.deleteSubBtn:hover{
-		color: var(--fontColor);
-	}
-	.productAddBtns:hover {
-		background-color: var(--mainColor);
+	.fileAddLabel:hover{
+		box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.58);
 	}
 
 
