--- a/src/main/webapp/resources/css/shop/draw/draw_admin.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_admin.css
@@ -78,6 +78,8 @@
     width: 100%;
     height: 400px;
     display: flex;
+    border-left: 2px solid var(--mainColor);
+    border-right: 2px solid var(--mainColor);
 }
 
 /*이벤트 각각 이미지*/
@@ -139,6 +141,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border-left: 2px solid var(--mainColor);
+    border-right: 2px solid var(--mainColor);
+    border-bottom: 2px solid var(--mainColor);
 }
 
 .drawModifyBtn {
