--- a/src/main/webapp/resources/css/shop/draw/draw_modify.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_modify.css
@@ -71,21 +71,21 @@
     position: relative;
 }
 .oneDrawTop::after{
-    content: '제목을 입력하세요';
+    content: '제목';
     font-size: 0.7rem;
     position: absolute;
-    top: -10px;
+    top: -16px;
     left: 5px;
+    font-weight: bolder;
 }
 
 .oneDrawTop input[type="text"]{
-    width: 90%;
+    width: 100%;
     height: 100%;
     padding-left: 0.5rem;
     color: var(--subFontColor);
     background-color: var(--subColor2);
     border: none;
-    outline: none;
     transition: .3s;
     font-weight: bolder;
     font-family: GimpoGothicRegular00;
@@ -178,6 +178,7 @@
     width: 90%;
     height: 50px;
     display: flex;
+    border: 1px solid black;
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.55);
 
 }
@@ -207,6 +208,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    font-size: 0.7rem;
 }
 
 .infoBottom textarea{
@@ -214,16 +216,32 @@
     height: 150px;
     padding: 0.5rem;
     background-color: var(--subColor2);
-    color: white;
     resize: none;
     transition: .3s;
     font-family: GimpoGothicRegular00;
+    color: var(--subFontColor4);
+    border: 0;
 }
 .infoBottom textarea:focus{
     background-color: var(--mainColor);
 }
+.infoBottom input[type="number"]{
+    font-family: GimpoGothicRegular00;
+    background-color: var(--subColor2);
+    border: 0;
+    height: 40px;
+    padding: 0 0.5rem;
+    color: var(--subFontColor4);
+}
+.infoBottom input[type="date"]{
+    font-family: GimpoGothicRegular00;
+    background-color: var(--subColor2);
+    border: 0;
+    height: 40px;
+    padding: 0 0.5rem;
+    color: var(--subFontColor4);
 
-
+}
 .drawBtnDiv {
     width: 100%;
     height: 50px;
@@ -245,6 +263,7 @@
     border-radius: 10px;
     font-family: GimpoGothicBold00;
 }
+
 
 
 
@@ -285,10 +304,6 @@
         width: 250px;
         height: 250px;
     }
-    .addDrawProductDiv{
-        width: 250px;
-        height: 250px;
-    }
 
 
 
@@ -314,6 +329,13 @@
     .drawProductImg{
         width: 300px;
         height: 300px;
+    }
+    .selectProductDivLeft{
+        overflow: hidden;
+        width: 0;
+    }
+    .selectProductDivRight{
+        width: 100%;
     }
     .infoWrapDiv{
         width: 90%;
