--- a/src/main/webapp/resources/css/shop/product/product_modify.css
+++ b/src/main/webapp/resources/css/shop/product/product_modify.css
@@ -194,7 +194,7 @@
 	height: 65%;
 	margin-bottom: 5px;
 	padding: 0.5rem;
-	display: block;
+	display: none;
 	align-items: center;
 	justify-content: center;
 }
